discussion/kv_engine/174510/174510_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[clone] MB-51681: Replace full CM scans with variables updated in-place

Instead of looping through every checkpoint owned
by the CheckpointManager and summing the individual
stats, create CM-level variables which are updated
in-place by Checkpoint MemoryCounters.

Change-Id: I3b60731994efe70e0f40019982774655c6bcec2f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-05-05 12:39:20.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-05 12:41:00.000000000
Message: 
Removed cc <GERRIT_ACCOUNT_1004851>.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-05 13:03:41.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45908/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45908/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18216/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18216/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19036/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19036/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20062/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20062/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27436/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27436/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17280/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17280/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17280/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38553/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16273/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6890/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6982/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
